--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -7,6 +7,9 @@ body{
 }
 
 header{
+    margin-top: -60px;
+    margin-left: -5px;
+    width: 1355px;
     text-align: center;
     font-size: 30pt;
     background-image: url(../Imagens/header.jpg);
@@ -14,6 +17,10 @@ header{
     background-position: center;
     background-size: cover;
     height: 200px;
+}
+
+h1{
+    padding-top: 20px;
 }
 
 h3{
