--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -1,56 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Carrois+Gothic&display=swap');
-
-body{
-    font-family: 'Carrois Gothic', sans-serif;
-    color: yellow;
-    background: url("../Imagens/bg.jpg");
+@font-face {
+    font-family: fonte;
+    src: url("Shadows_Into_Light/ShadowsIntoLight-Regular.ttf");
 }
 
-header{
-    margin-top: -60px;
-    margin-left: -5px;
-    width: 1350px;
-    text-align: center;
-    font-size: 30pt;
-    background-image: url(../Imagens/header.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    height: 200px;
+.body{
+    font-family: fonte;
+    font-size: 20px;
 }
 
 h1{
-    padding-top: 50px;
-}
-
-h3{
-    text-indent: 25px;
-}
-
-p{
-    text-indent: 50px;
-}
-
-ul{
-    text-indent: 50px;
-}
-
-section#corpo{
-    font-size: 18pt;
-}
-
-footer{
     text-align: center;
-    font-weight: bolder;
+    font-size: 45px;
 }
 
-.button{
-    font-size: 16px;
-    border-radius: 5px;
-    border: 5px;
-    box-shadow: 4px 4px 6px green;
-    background-color: yellowgreen;
-    padding: 5px;
-    font-weight: bold;
-    margin-left: 100px;
+.iniciar{
+    color: blue;
+}
+
+.check-btn{
+    color: red;
 }
